--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://riitian10:azlGaK7ljFkdzkTi@cluster0.qhai842.mongodb.net/flipkart_offers
+MONGODB_URI=your_mongodbCompass_connection_string
 PORT=2000
